// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormControl it works default 1`] = `
.c1 {
  display: block;
  font-size: 14px;
  line-height: 16px;
  padding-bottom: 4px;
}

.c2 {
  background-clip: padding-box;
  background-color: #ffffff;
  background-image: none;
  border-radius: 4px;
  border: 1px solid #cccccc;
  color: #333333;
  display: block;
  font-family: inherit;
  font-size: 14px;
  line-height: 16px;
  font-weight: 400;
  height: 48px;
  outline: none;
  padding: 16px 16px;
  text-align: left;
  -webkit-transition: border 0.3s,background-color 0.3s,color 0.3s,box-shadow 0.3s;
  transition: border 0.3s,background-color 0.3s,color 0.3s,box-shadow 0.3s;
  width: 100%;
}

.c2,
.c2:hover,
.c2:focus,
.c2:active {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-shadow: none;
  outline: none;
}

.c2:hover {
  border-color: #333333;
}

.c2:focus {
  border-color: #56a4c9;
  box-shadow: 0 0 5px 0 #56a4c9;
}

.c2::-webkit-input-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c2::-moz-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c2:-ms-input-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c2::placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c2:disabled,
.c2[readonly] {
  background-image: none;
  background-color: #f2f2f2;
  border-color: #cccccc;
  cursor: not-allowed;
  opacity: 1;
}

.c2:disabled,
.c2[readonly],
.c2:disabled::-webkit-input-placeholder,
.c2[readonly]::-webkit-input-placeholder {
  color: #999999;
}

.c2:disabled,
.c2[readonly],
.c2:disabled::-moz-placeholder,
.c2[readonly]::-moz-placeholder {
  color: #999999;
}

.c2:disabled,
.c2[readonly],
.c2:disabled:-ms-input-placeholder,
.c2[readonly]:-ms-input-placeholder {
  color: #999999;
}

.c2:disabled,
.c2[readonly],
.c2:disabled::placeholder,
.c2[readonly]::placeholder {
  color: #999999;
}

.c2:disabled,
.c2[readonly],
.c2:disabled:hover,
.c2[readonly]:hover {
  border-color: #cccccc;
  box-shadow: none;
}

.c2:focus {
  font-weight: 400;
}

.c2:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c2:focus::-moz-placeholder {
  opacity: 1;
}

.c2:focus:-ms-input-placeholder {
  opacity: 1;
}

.c2:focus::placeholder {
  opacity: 1;
}

.c0 {
  padding-bottom: 24px;
}

<div
  class="c0"
>
  <label
    class="c1"
  >
    Default label
  </label>
  <input
    class="c2"
    value=""
  />
</div>
`;

exports[`FormControl it works with status error 1`] = `
.c1 {
  display: block;
  font-size: 14px;
  line-height: 16px;
  padding-bottom: 4px;
}

.c2 {
  background-clip: padding-box;
  background-color: #ffffff;
  background-image: none;
  border-radius: 4px;
  border: 1px solid #cccccc;
  color: #333333;
  display: block;
  font-family: inherit;
  font-size: 14px;
  line-height: 16px;
  font-weight: 400;
  height: 48px;
  outline: none;
  padding: 16px 16px;
  text-align: left;
  -webkit-transition: border 0.3s,background-color 0.3s,color 0.3s,box-shadow 0.3s;
  transition: border 0.3s,background-color 0.3s,color 0.3s,box-shadow 0.3s;
  width: 100%;
  background-position: top 12px right 12px;
  background-size: 24px 24px;
  background-repeat: no-repeat;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgZW5hYmxlLWJhY2tncm91bmQ9Im5ldyAwIDAgMjQgMjQiPjxwYXRoIGZpbGw9IiNBOTAwMTYiIGQ9Ik0yMSAyMmgtMThjLS4zIDAtLjctLjItLjktLjUtLjItLjMtLjItLjcgMC0xbDktMThjLjMtLjcgMS40LS43IDEuOCAwbDkgMThjLjIuMy4xLjcgMCAxLS4yLjMtLjYuNS0uOS41em0tMTYuNC0yaDE0LjhsLTcuNC0xNC44LTcuNCAxNC44ek0xMSAxMGgydjZoLTJ6Ii8+PGNpcmNsZSBmaWxsPSIjQTkwMDE2IiBjeD0iMTIiIGN5PSIxOCIgcj0iMS4zIi8+PC9zdmc+');
}

.c2,
.c2:hover,
.c2:focus,
.c2:active {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-shadow: none;
  outline: none;
}

.c2:hover {
  border-color: #333333;
}

.c2:focus {
  border-color: #56a4c9;
  box-shadow: 0 0 5px 0 #56a4c9;
}

.c2::-webkit-input-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c2::-moz-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c2:-ms-input-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c2::placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c2:disabled,
.c2[readonly] {
  background-image: none;
  background-color: #f2f2f2;
  border-color: #cccccc;
  cursor: not-allowed;
  opacity: 1;
}

.c2:disabled,
.c2[readonly],
.c2:disabled::-webkit-input-placeholder,
.c2[readonly]::-webkit-input-placeholder {
  color: #999999;
}

.c2:disabled,
.c2[readonly],
.c2:disabled::-moz-placeholder,
.c2[readonly]::-moz-placeholder {
  color: #999999;
}

.c2:disabled,
.c2[readonly],
.c2:disabled:-ms-input-placeholder,
.c2[readonly]:-ms-input-placeholder {
  color: #999999;
}

.c2:disabled,
.c2[readonly],
.c2:disabled::placeholder,
.c2[readonly]::placeholder {
  color: #999999;
}

.c2:disabled,
.c2[readonly],
.c2:disabled:hover,
.c2[readonly]:hover {
  border-color: #cccccc;
  box-shadow: none;
}

.c2:focus {
  font-weight: 400;
}

.c2:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c2:focus::-moz-placeholder {
  opacity: 1;
}

.c2:focus:-ms-input-placeholder {
  opacity: 1;
}

.c2:focus::placeholder {
  opacity: 1;
}

.c2,
.c2:hover {
  border-color: #e5363a;
}

.c0 {
  padding-bottom: 24px;
}

<div
  class="c0"
>
  <label
    class="c1"
  >
    Default label
  </label>
  <input
    class="c2"
    value=""
  />
</div>
`;

exports[`FormControl it works with status success 1`] = `
.c1 {
  display: block;
  font-size: 14px;
  line-height: 16px;
  padding-bottom: 4px;
}

.c2 {
  background-clip: padding-box;
  background-color: #ffffff;
  background-image: none;
  border-radius: 4px;
  border: 1px solid #cccccc;
  color: #333333;
  display: block;
  font-family: inherit;
  font-size: 14px;
  line-height: 16px;
  font-weight: 400;
  height: 48px;
  outline: none;
  padding: 16px 16px;
  text-align: left;
  -webkit-transition: border 0.3s,background-color 0.3s,color 0.3s,box-shadow 0.3s;
  transition: border 0.3s,background-color 0.3s,color 0.3s,box-shadow 0.3s;
  width: 100%;
  background-position: top 12px right 12px;
  background-size: 24px 24px;
  background-repeat: no-repeat;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgZW5hYmxlLWJhY2tncm91bmQ9Im5ldyAwIDAgMjQgMjQiPjxwYXRoIGZpbGw9IiMxMDdCMDAiIGQ9Ik04LjggMTUuOWwtNC4yLTQuMi0xLjQgMS40IDUuNiA1LjYgMTItMTItMS40LTEuNC0xMC42IDEwLjZ6Ii8+PC9zdmc+');
}

.c2,
.c2:hover,
.c2:focus,
.c2:active {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-shadow: none;
  outline: none;
}

.c2:hover {
  border-color: #333333;
}

.c2:focus {
  border-color: #56a4c9;
  box-shadow: 0 0 5px 0 #56a4c9;
}

.c2::-webkit-input-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c2::-moz-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c2:-ms-input-placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c2::placeholder {
  color: #999999;
  opacity: 1;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c2:disabled,
.c2[readonly] {
  background-image: none;
  background-color: #f2f2f2;
  border-color: #cccccc;
  cursor: not-allowed;
  opacity: 1;
}

.c2:disabled,
.c2[readonly],
.c2:disabled::-webkit-input-placeholder,
.c2[readonly]::-webkit-input-placeholder {
  color: #999999;
}

.c2:disabled,
.c2[readonly],
.c2:disabled::-moz-placeholder,
.c2[readonly]::-moz-placeholder {
  color: #999999;
}

.c2:disabled,
.c2[readonly],
.c2:disabled:-ms-input-placeholder,
.c2[readonly]:-ms-input-placeholder {
  color: #999999;
}

.c2:disabled,
.c2[readonly],
.c2:disabled::placeholder,
.c2[readonly]::placeholder {
  color: #999999;
}

.c2:disabled,
.c2[readonly],
.c2:disabled:hover,
.c2[readonly]:hover {
  border-color: #cccccc;
  box-shadow: none;
}

.c2:focus {
  font-weight: 400;
}

.c2:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c2:focus::-moz-placeholder {
  opacity: 1;
}

.c2:focus:-ms-input-placeholder {
  opacity: 1;
}

.c2:focus::placeholder {
  opacity: 1;
}

.c2,
.c2:hover {
  border-color: #109c42;
}

.c0 {
  padding-bottom: 24px;
}

<div
  class="c0"
>
  <label
    class="c1"
  >
    Default label
  </label>
  <input
    class="c2"
    value=""
  />
</div>
`;
